mongod crash, bug fix when connections > wiredtiger's session_max

XMLWordPrintableJSON

    • Storage Engines - Server Integration
    • Fully Compatible
    • ALL
    • v8.1, v8.0, v7.0, v6.0
    • RSS Sydney - 2024-06-11, RSS Sydney - 2024-06-25, Hoity-Toity - 2024-12-10, FarewellDaniel - 2025-02-18, HappyAddy - 2025-03-04, pro-duck-tive - 2025-04-01
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      if user's max connections is greater than wiredtiger's session_max, it will crush.

      wiredtiger's session_max must great than user's connection.

            Assignee:
            Clarisse Cheah
            Reporter:
            y yz (EXT)
            Votes:
            0 Vote for this issue
            Watchers:
            16 Start watching this issue

              Created:
              Updated:
              Resolved: