SERVER-82688 Bug fix when connections > wiredtiger's session_max (#33685)

GitOrigin-RevId: 8683908b191843bf1e5296807ed60f1e97668b81